# gamma

./: .env.example  .env.prod.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  REVIEW.md  compose.prod.yml  docker-compose.yml
.claude/: launch.json
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile  deny.toml  docker-compose.yml  rust-toolchain.toml
backend/.sqlx/: query-000a4e11e5e04119e9dfd3d2d93e721c347410deaea7d0bea77559792548f118.json  query-02cc65b1afbf1b86c6a4524f2943108168eba1f70c722dfd4ef35f3ad0805fb5.json  query-033c2531a3466a142a631c8fecb74367e78947c7ae271f49350d684efd2424ad.json  query-07e3c596023a41d445cbc4c6b9389b3350e40eff7c624d864f9773b05b0f5e7b.json  query-094f744126e0ac40357ec2ebb5e4c9db347f8cead4c5af66c7a171ebcf131039.json  query-0d45868eb33387a09f979d49ee31a47c34071cb8037f39d75b6542876d8ee767.json  query-0efeda1b424eacefe8a7f4cbafc9340dbc703ffc768fd98e20ac7d5522edf481.json  query-1063edfea6d0256856573c15dcce4c1876b8d97a70e63150f04abd4c60e4eb4b.json  query-1141b4faf1c6c6d7ff12c002386aa192da81e877d5b830a506ac892564918746.json  query-13bb351c132888fb3ccba78398a5c9db927caefa4d61474d9dc7042351e01b4a.json  query-13f0e16d3a23b477c323a28df8aaab4d4727935fe183b6f108c84fb529c94f93.json  query-17509f025783d557dc380f1aa3b6c47130789fe2000b31617b685a8d54387207.json  query-17bcc398b3e78d8a9b960d820cf7818da9ed877b2cf488436feb0d52d269292d.json  query-1895b36898b6d07e24fc4bfc8434066e551188c8a9f0618a725ae2e8d47712df.json  query-1c7573b124e4f855f830e859e158da9749851b9d7e1ad2ec96f38c1c9dd78d07.json  query-1d5e8f35c27e080a709524b50496849e37ba4dbf81a9ab4dcba2607d6b41dd7c.json  query-1d795d3de32204304a8dd5382562af981a1d6adf91f150bdffae448a07d19df3.json  query-1f80b248453efca8dc4307e28c6391e5f6b49824b015963943ebe97e7078132b.json  query-21333d04beeb8650ff80c10d1d03540c29d13f0829ceb251da85b7002b2d4597.json  query-25a3b8d3a8a1d10b12a4efa248ce9ffe1d98b0152acbf0bcda60d3b6e56d4e20.json  query-26365e7717102872261a7867e952785f1fdb60d12b294d228233d73623180404.json  query-277594d213e877742998ca2d9f0105c5e5968c9aaf3316d23515b7ad9a4d518a.json  query-31542e2b6eab17340521e08acc014fdd96558c53706a393da1f647ee56a4405f.json  query-3488fd1eac2f4b484fd3611ffbe91143d54f4abbe1ecf583a1f13421cc63e149.json  query-377704d10d2cc4bf67beda8fd6fb8a2d7ac084a02bdc37739e3fe2609013783d.json  query-384aa3f2e7ea96c27945fdb205baa5f094f97aa6f0b4e358bd2dba4f6bda28f3.json  query-3998669a56c0867a934982eaf0664477f6ea1b02182403e727164bc5428ab0eb.json  query-3befe996e4c0b0adef07feb22037cfc7a7fc4efd07a0c4b4eddc853694e9c75c.json  query-3e1da71b5c25a55991da54cfb7261386a5a3994ef95d147ad7645be07f7d8c98.json  query-3f0977be9d19baec3cdc7766522df946db57b1d5ca855874db7beda1e6dbb304.json  query-4159783db2b542056f17149a94061c1c982297ba45aaa084bc58df8050f5c97a.json  query-41961720d52dfd2d543512b1ef46ac3e9fec082598534b7ee7f48cc82fa07887.json  query-434be3f5402e492a0e2c57451d9c1f49586f42e37ab16a7d656b0e308dcb6ea5.json  query-43a36b14de6a751130f4d38ab29de1737f683ab8dbc97199ca49f70d98d248a4.json  query-4749e354bb7cfa6958665c8748726f3d0908401fecc14aaca4f7fb188b3a1d0b.json  query-47e8ffd18680770e12225fc42d757e661d226b90f95a5808324e2c30cae8d373.json  query-4aba476e328765b7697aafa3e489eb3a31946b1ed911b7d9b3d5b36f2b1b407b.json  query-4e0b022635de66e4dc2ee458217bd0295ae8d033a5d3a7a0cda7f6b5996f6108.json  query-515ead59955a5c35ace1869c2a734dca48b54d85ce2b849a140fcb3512e6b68c.json  query-55d6e240f3dcae45591bf792046fe85564b6fa16c841eb4646f9baebf507b9e9.json  (+98 more)
backend/bindings/: BackfillResult.ts  CodePurpose.ts  Comment.ts  CurrentUser.ts  EmailCheckRequest.ts  EmailCheckResult.ts  FeedPage.ts  Follow.ts  GemBalance.ts  IngestionStatus.ts  InteractionType.ts  InteractionView.ts  LoginWithCodeRequest.ts  MediaAssetView.ts  NewComment.ts  NewInteraction.ts  NewPost.ts  Post.ts  PrivateAreaConfigRequest.ts  PrivateAreaView.ts  ReferralTerms.ts  ReferralTermsRequest.ts  RegisterRequest.ts  ReportRequest.ts  ReportedPost.ts  RequestCodeRequest.ts  ResetPasswordRequest.ts  Role.ts  SettlementSummary.ts  User.ts
backend/crates/core-api/: Cargo.toml
backend/crates/core-api/src/: error.rs  lib.rs  mailer.rs  main.rs  observability.rs  queue.rs  rate_limit.rs  state.rs  util.rs  worker.rs
backend/crates/core-api/tests/: auth.rs  comments.rs  cors.rs  feed.rs  follows.rs  gems.rs  ingestion_backfill.rs  interactions.rs  media.rs  metrics.rs  moderation.rs  posts.rs  private_area.rs  private_area_api.rs  private_area_visibility.rs  rate_limit.rs  signals.rs  users.rs
backend/crates/db/: Cargo.toml
backend/crates/db/src/: lib.rs
backend/crates/db/tests/: migrations.rs
backend/crates/domain/src/: lib.rs
backend/crates/econ-params/: Cargo.toml
backend/crates/econ-params/src/: lib.rs
backend/crates/gem-engine/: Cargo.toml
backend/crates/gem-engine/proptest-regressions/: lib.txt
backend/crates/gem-engine/src/: graph.rs  lib.rs
backend/crates/ledger/src/: lib.rs  pg.rs
backend/migrations/: 0002_gem_balances.sql  0003_epoch_settlements.sql  0005_media_transcode.sql  0006_media_unlocks.sql  0007_auth.sql  0008_user_roles.sql  0010_ledger_journal.sql  0011_content_signals.sql  0012_moderation.sql  0013_post_media.sql  0014_comments.sql  0015_interaction_event_fks.sql  0016_constraints_and_indexes.sql  0017_login_throttle.sql  0018_referrals.sql  0019_service_role.sql  0020_signal_schema.sql  0021_private_area.sql  0022_media_takedown.sql  0023_email_codes.sql  0024_like_retraction_and_comment_likes.sql
backend/ops/: seed-demo.py
crates/core-api/: Cargo.toml
crates/core-api/src/: error.rs  health.rs  lib.rs  main.rs  queue.rs  state.rs
crates/core-api/tests/: feed.rs  follows.rs  gems.rs  interactions.rs  media.rs  posts.rs  signals.rs  users.rs
crates/settlement/: Cargo.toml
crates/settlement/src/: lib.rs
services/ingestion/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  RUNBOOK.md  pyproject.toml
services/ingestion/tests/: test_analyzer.py  test_api_client.py  test_config.py  test_health.py  test_metrics.py  test_model_analyzer.py  test_queue.py  test_retry.py  test_worker.py
(+240 files in other folders)
