[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2021"
license = "LicenseRef-Proprietary"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
async-trait = "0.1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
proptest = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "migrate", "chrono"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
tower = { version = "0.5", features = ["util"] }

# Faster, leaner release builds for the money-critical binaries.
[profile.release]
lto = "thin"
codegen-units = 1
