[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2021"
license = "LicenseRef-Proprietary"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
async-trait = "0.1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
proptest = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "migrate", "chrono", "json"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
tower = { version = "0.5", features = ["util"] }
aws-sdk-s3 = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
uuid = { version = "1", features = ["v4"] }
redis = { version = "0.27", features = ["tokio-comp"] }
argon2 = "0.5"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"

# Faster, leaner release builds for the money-critical binaries.
[profile.release]
lto = "thin"
codegen-units = 1
# Trap integer overflow on conserved quantities in release too: a wrapping add on
# a balance/emission would silently corrupt supply. We'd rather fail closed (panic,
# caught by the settlement error path) than mint 2^128 gems. The cost is negligible
# on this workload.
overflow-checks = true
