[package]
name = "core-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "core-api"
path = "src/main.rs"

[dependencies]
domain = { path = "../domain" }
axum.workspace = true
tokio.workspace = true
serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
