[package]
name = "core-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "core-api"
path = "src/main.rs"

[dependencies]
domain = { path = "../domain" }
db = { path = "../db" }
ledger = { path = "../ledger" }
gem-engine = { path = "../gem-engine" }
settlement = { path = "../settlement" }
econ-params = { path = "../econ-params" }
storage = { path = "../storage" }
uuid.workspace = true
redis.workspace = true
thiserror.workspace = true
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
dotenvy.workspace = true

[dev-dependencies]
tower.workspace = true
serde_json.workspace = true
reqwest.workspace = true
