[package]
name = "settlement"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
domain = { path = "../domain" }
econ-params = { path = "../econ-params" }
gem-engine = { path = "../gem-engine" }
ledger = { path = "../ledger" }
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true }
