[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gamma-ingestion"
version = "0.1.0"
description = "AI ingestion service for the Gamma platform — consumes new posts from Redis, analyses them, and writes content signals back through the core API (ADR 0006)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "redis>=5.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
gamma-ingestion = "gamma_ingestion.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
