[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gamma-ingestion"
version = "0.1.0"
description = "AI ingestion service for the Gamma platform — consumes new posts from Redis, analyses them, and writes content signals back through the core API (ADR 0006)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "redis>=5.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6", "mypy>=1.11"]

[project.scripts]
gamma-ingestion = "gamma_ingestion.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, warnings, pyupgrade, bugbear, blind-except.
select = ["E", "F", "I", "W", "UP", "B", "BLE"]

[tool.mypy]
python_version = "3.11"
files = ["src"]
disallow_untyped_defs = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
