[package]
name = "core-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
# The crate ships several binaries (the API + workers); make the API the default
# so `cargo run -p core-api` is unambiguous.
default-run = "core-api"

[[bin]]
name = "core-api"
path = "src/main.rs"

[dependencies]
domain = { path = "../domain" }
db = { path = "../db" }
ledger = { path = "../ledger" }
gem-engine = { path = "../gem-engine" }
settlement = { path = "../settlement" }
econ-params = { path = "../econ-params" }
storage = { path = "../storage" }
uuid.workspace = true
redis.workspace = true
argon2.workspace = true
rand.workspace = true
sha2.workspace = true
hex.workspace = true
thiserror.workspace = true
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
tower_governor = "0.4"
ts-rs = { version = "12.0.1", features = ["chrono-impl"] }
tower-http = { version = "0.7.0", features = ["trace", "request-id", "cors"] }
metrics = "0.24.6"
metrics-exporter-prometheus = { version = "0.18.3", default-features = false }

[dev-dependencies]
tower.workspace = true
serde_json.workspace = true
reqwest.workspace = true
